2018-07-07  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use g_debug() instead of conditionally compiled printing

	* libbalsa/html.c (lbh_navigation_policy_decision),
	(lbh_new_window_policy_decision), (lbh_response_policy_decision),
	(lbh_resource_notify_response_cb), (lbh_web_process_crashed_cb),
	(lbh_cid_cb), (libbalsa_html_new):

2018-07-05  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/balsa-mime-widget.c (balsa_mime_widget_new): Do not leak
	  the GtkAdjustment.

2018-07-05  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/balsa-message.c (bm_find_scroll_to_rectangle), (select_part):
	  Use gtk_scrolled_window_get_{h,v}adjustment() instead of
	  GObject properties (and consequently, do not leak the
	  adjustments).

2018-07-03  Albrecht Dreß <albrecht.dress@arcor.de>

	libnetclient private data fixes

	* libnetclient/net-client-pop.c, libnetclient/net-client-siobuf.c,
	  libnetclient/net-client-smtp.c: properly access and destroy the private data
	* libnetclient/test/Makefile.am: fix lcov cleaning the test app
	  from the coverage data
	* libnetclient/test/cert.pem, libnetclient/test/cert_u.pem:
	  replace expired snakeoil certs for testing

2018-06-28  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/mailbox-conf.c: Really build with gpgme desabled.

2018-06-28  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libnetclient/net-client.c (net_client_class_init),
	(net_client_init): g_type_class_add_private() is soon to be
	deprecated; use G_DEFINE_TYPE_WITH_PRIVATE intead;
	also use net_client_get_instance_private() instead of
	G_TYPE_INSTANCE_GET_PRIVATE().

2018-06-26  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/main-window.c (about_activated): Update the 'about'
	dialog.

2018-06-26  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/main-window.c (bw_real_open_mbnode_idle_cb),
	(bw_real_open_mbnode_thread), (balsa_window_real_open_mbnode),
	(bw_mailbox_check): Use g_application_{hold,release} to keep the